# halo2-collatz

./: Cargo.toml  package-lock.json
src/: arithmetic_circuit.rs  lib.rs  main.rs  wasm.rs
src/arithmetic_circuit/: arithmetic_circuit.rs
