[package]
name = "halo2-collatz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
halo2_proofs = { version = "0.3.0", features = ["dev-graph"] }
wasm-bindgen = { version = "0.2.87" }
getrandom = { version = "0.2", features = ["js"] }
plotters = "0.3.4"

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.3"
